benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-safe029_power.opt_pso.opt_rmo.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe029_power.opt_pso.opt_rmo.opt.yml/safe029_power.opt_pso.opt_rmo.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe029_power.opt_pso.opt_rmo.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_lp4xvqq2/tmp/tmp6sh6zl5o.c
Compilation started
/tmp/BenchExec_run_lp4xvqq2/tmp/tmp6sh6zl5o.c: In function ‘main’:
/tmp/BenchExec_run_lp4xvqq2/tmp/tmp6sh6zl5o.c:641:19: error: ‘FALSE’ undeclared (first use in this function)
  641 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_lp4xvqq2/tmp/tmp6sh6zl5o.c:641:19: note: each undeclared identifier is reported only once for each function it appears in

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
